added comments for describing the code.

--- a/Ex 2/index.html
+++ b/Ex 2/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <script>
+        //stores a name in variable and displays
+
         let name = "John";
         
         console.log(`Hello ${name}, would you like to learn some Python today?`)
