--- a/Ex 3/index.html
+++ b/Ex 3/index.html
@@ -9,6 +9,10 @@
 <body>
     
     <script>
+
+        //it stores a name in a variable and then changes it to upperCase, LowerCase and TitleCase
+
+        
         let name = "ALLAMA IQBAL";
 
         let upperCase = name.toUpperCase();
