--- a/Fav Number/index.html
+++ b/Fav Number/index.html
@@ -8,13 +8,9 @@
 </head>
 <body>
     <script>
-        // Removes white spaces, tabs and new lines from a string.
-        let str = "sample\t text\n is here";
-        console.log(str);
-
-        let str2 = str.replace(/[\n\t]/gm, '');
-
-        console.log(str2);
+        //stores fav number in variable then revealed it in output
+        let favNum = 28;
+        console.log(`My Favorite Number is: - ${favNum}`);
     </script>
 </body>
 </html>
