--- a/Number Eight/index.html
+++ b/Number Eight/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-
+// performs addition, subtraction, multiplication and division operation which is always equals to 8
         console.log("Addition: -", 5+3);
         console.log("Subtraction: -", 10-2);
         console.log("Multiplication: -", 4*2);
