--- a/ChangingGuestList/index.html
+++ b/ChangingGuestList/index.html
@@ -12,7 +12,10 @@
         console.log(`I would like to Invite ${guestList[0]}`);
         console.log(`I would like to Invite ${guestList[1]}`);
         console.log(`I would like to Invite ${guestList[2]}`);
-         
+        console.log(`${guestList[1]} is not able to attend the Cermony`);
+        guestList[1] = "Mr. Rehman";
+        console.log(`I would like to Invite ${guestList[1]}`);
+
     </script>
 </body>
 </html>
