--- a/TheyThinkSomething/index.html
+++ b/TheyThinkSomething/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        let items = {
+        const items = {
             name: "Kashif",
             id: "123",
             class: "Four",
