--- a/alienColors1/index.html
+++ b/alienColors1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        let alien_color = ["green","yellow","red"];
+        const alien_color = ["green","yellow","red"];
         if((alien_color[0] || alien_color[1] || alien_color[2])=="green"){
             console.log("You Earned 05 Points");
         }else {         
