--- a/favoriteFruit/index.html
+++ b/favoriteFruit/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  <script>
-    let favorite_fruits = ["apple","banana","mango"];
+    const favorite_fruits = ["apple","banana","mango"];
     
 
     if(favorite_fruits[0]=="banana" || favorite_fruits[1]=="banana" || favorite_fruits[2]=="banana"){
