--- a/helloAdmin/index.html
+++ b/helloAdmin/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        let users = ["admin","Kashif","Zahid","Waseem"];
+        const users = ["admin","Kashif","Zahid","Waseem"];
         users.forEach((e)=>{
             if(e=="admin"){
              console.log(`Hello ${e}, would you like to see a status report`);       
