--- a/moreConditionalTest/index.html
+++ b/moreConditionalTest/index.html
@@ -29,7 +29,7 @@
         console.log(val1<30 && val2>20);
         console.log(val1>30 || val2>20);
 
-        let arr = ["one","two","three"];
+        const arr = ["one","two","three"];
         console.log(arr[0]=="one");
         console.log(arr[3]=="four");
 
