--- a/names/index.html
+++ b/names/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        let names = ["Ali", "Ahsan", "Sikander"];
+        const names = ["Ali", "Ahsan", "Sikander"];
 
         console.log("at first Index: ", names[0]);
         console.log("at second Index: ", names[1]);
