--- a/noUser/index.html
+++ b/noUser/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  <script>
-       let users = [];
+       const users = [];
 
        if(users.length==0){
         console.log("We need some Users");
