--- a/seeingTheWorld/index.html
+++ b/seeingTheWorld/index.html
@@ -9,10 +9,10 @@
 <body>
     <script>
         //original array
-        let places = ["Turkey", "Egypt","London","Saudi Arabia","Madina"]
+        const places = ["Turkey", "Egypt","London","Saudi Arabia","Madina"]
         console.log("Original Array: ", places);
         //sorted Array
-        let sortedArr = ["Turkey", "Egypt","London","Saudi Arabia","Madina"].reverse().sort()
+        const sortedArr = ["Turkey", "Egypt","London","Saudi Arabia","Madina"].reverse().sort()
         console.log("Sorted Array: ", sortedArr);
         //original Array
         console.log("Original Array: ", places);
@@ -27,24 +27,6 @@
         let sortedArr2 = original.sort();
         console.log("Sorted again: ", sortedArr2);
 
-        // original array
-        // let places = ["Turkey", "Egypt","London","Saudi Arabia","Madina"]
-        // console.log("Original Array: ", places);
-        // //sorted Array
-        // let sortedArr = ["Turkey", "Egypt","London","Saudi Arabia","Madina"].reverse().sort()
-        // console.log("Sorted Array: ", sortedArr);
-        // //original Array
-        // console.log("Original Array: ", places);
-        // //reversed Array
-        // let reversedArr = sortedArr.reverse()
-        // console.log("Reversed Array: ", reversedArr);
-        // console.log("Original Array: ", places);
-        // let reversedArr2 = ["Turkey", "Egypt","London","Saudi Arabia","Madina"].reverse()
-        // console.log("Reversed Array: ", reversedArr2);
-        // let original = reversedArr2.reverse();
-        // console.log("Original Array: ", original);
-        // let sortedArr2 = original.sort();
-        // console.log("Sorted again: ", sortedArr2);
     </script>
 </body>
 </html>
