--- a/IntentionalError/index.html
+++ b/IntentionalError/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        let names = ["Ali", "Rehman", "Basit"]
+        const names = ["Ali", "Rehman", "Basit"]
         console.log(`Hello ${names[0]}`);
         console.log(`Hello ${names[1]}`);
         console.log(`Hello ${names[2]}`);
