--- a/shrinkingList/index.html
+++ b/shrinkingList/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        let guestList = ["Mr. Farhan", "Mr. Kamran", "Ms. Sanam"];
+        const guestList = ["Mr. Farhan", "Mr. Kamran", "Ms. Sanam"];
         console.log(`I would like to Invite ${guestList[0]}`);
         console.log(`I would like to Invite ${guestList[1]}`);
         console.log(`I would like to Invite ${guestList[2]}`);
